= 1.4.0 =
[Added] AJAX loading the plugins list when empty or refreshing list.
[Fixed] Missing (if available) GitHub Authentication when requesting readme.* files.

= 1.3.1 =
[Fixed] Fatal error undefined `esc_html_`

= 1.3.0 =
[Added] Plugin Settings Page (under Admin > Settings > Manage CP Repos)
[Added] Setting to add custom GitHub Repositories of Orgs, Users or single Repos.
[Added] Setting to store Personal GitHub Token, which increases the API Limits to 5k hourly instead of 60.
[Added] Verified Orgs (_not users_) are pre-selected. A PR can be used to add new Orgs to the vetted list.
[Added] Fundations to read remote readme, README, (both in md or txt) files. Currently used ony for below [Fixed] item.
[Fixed] Problem where plugins with foldername/distinct-filename.php AND a unguessable Plugin Title could not be managed.
[Improved] Make drastically less calls to the GitHub API by re-using already queried data as much as possible.
[Improved] Refactored Plugin Code.

= 1.2.0 =
[Added] GitHub Repo Sync for (TukuToi) Plugins
[Added] Total Page Number on pagination
[Added] Improved Error notices.
[Changed] Moved the "report this plugin" to the left in the cards

= 1.1.4 =
[Fixed] Plugins (unless the integration itself) got deactivated after Updating.

= 1.1.3 =
[Fixed] Plugin could not update itself.
[Fixed] Request-URI Too Long when performing several searches without resetting the search.
[Fixed] Unused third argument in AJAX operations removed.

= 1.1.0 =
[Added] AJAXified install/activate/deactivate/update/delete buttons/features. 
[Added] Bottom pagination
[Fixed] Design of main search bar

= 1.0.1 =
[Fixed] Added fallback for when no mail client is installed on user computer.

= 1.0.0 =
[Added] Initial release